fixed issues with nav on small devices with JS disabled

--- a/assets/css/noscript-nav.css
+++ b/assets/css/noscript-nav.css
@@ -45,7 +45,6 @@ nav .link a:after {
   margin: 5px 0 0;
   transition: all ease-in-out;
   transition-duration: 0.4s;
-  opacity: 0;
   background-color: #fff;
 }
 
@@ -77,7 +76,7 @@ nav .link:hover a:after {
 
 @media screen and (max-width: 768px) {
   nav {
-    position: relative;
+    position: static;
     padding-right: 0;
   }
 
@@ -86,36 +85,25 @@ nav .link:hover a:after {
   }
 
   nav .links {
+    position: static;
     background: #2f514b;
     height: 10vh;
-    width: 100vw;
-    max-width: none;
+    max-width: 100vw;
+    width: 100%;
+    clip-path: none;
+    -webkit-clip-path: none;
+    transition: all 1s ease-out;
+    pointer-events: all;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    clip-path: none;
-    -webkit-clip-path: none;
-    transition: none;
   }
-  .landing {
-    flex-direction: column;
-  }
+
   nav .links .link {
+    z-index: 2;
     opacity: 1;
   }
   nav .links .link a {
-    font-size: 1.25rem;
-  }
-  nav .links .link:nth-child(1) {
-    transition: none;
-  }
-  nav .links .link:nth-child(2) {
-    transition: none;
-  }
-  nav .links .link:nth-child(3) {
-    transition: none;
-  }
-  nav .links .link:nth-child(4) {
-    transition: none;
+    font-size: 1rem;
   }
 }
